Align items in bottom-right div. Adjust items in middle-right div. Fix bug where only 1 image on the right appears. Add background colors to right content of page.

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     margin:0px;
     border:0px;
     
+
+    
 }
 
 .background-image{
@@ -14,41 +16,104 @@ body {
     
 }
 
-.odin-logo{
+.overlay-img{
     display:flex;
-    position: relative;
-    border:1px solid red;
-    flex-shrink: 0;
-    width:100%;
+    position: absolute;
+    width: 730px;
+    flex:1;
     height:220px;
-    margin-top:220px;
+    margin-top:100px;
     background-color:black;
-    
-   
+    justify-content: center;
+    opacity: 70%;
     
 }
+
+
 
 .right-content{
     display:flex;
     flex-direction: column;
-    width:50%;
+    width:80%;
     height:100vh;
-    border:1px solid red;
+    background-color: rgb(210,210,210);
+    
+    
     
 }
+
+.right-top{
+    display:flex;
+    flex:1;
+    align-items: center;
+    margin-left:25px;
+    margin-top:35px;
+    
+    
+}
+
+.right-middle{
+    display:flex;
+    flex-direction: column;
+    background-color: white;
+    flex:1;
+    box-shadow: 10px;
+}
+
+.firstName,
+.lastName,
+.email,
+.phoneNumber,
+.password,
+.confirmedPassword{
+    display: flex;
+    flex-direction: column;
+    width:200px;
+
+    
+}
+
+.right-middle p{
+    margin-left: 40px;
+    font-size: 30px;
+    font-weight: bold;
+    opacity: 80%;
+    margin-top: 15px;
+}
+
+.form{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
+    width:200px;
+    margin-left: 40px;
+    gap:20px,0px;
+    align-items:center;
+   
+    
+    
+}
+
+input{
+    width:250px;
+    height:20px;
+    border-radius: 5px;
+    border-color: grey;
+    margin-bottom: 10px;
+    margin-right: 55px;
+}
+
 
 .left-img{
     display:flex;
     width:50%;
     height:100vh;
-    border:1px solid red;
     overflow: hidden;
 
 }
 
 .right-content div{
     display: flex;
-    border:1px solid red;
     width:100%;
     height:100%;
     
@@ -58,6 +123,46 @@ body {
     display:flex;
     font-weight: bold;
     font-size: 22px;
+}
+
+.right-bottom{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    margin:40px;
+    flex:1;
+    
+}
+
+.right-bottom button{
+    background-color: #596D48;
+    width:220px;
+    height:55px;
+    border-radius: 4px;
+    font-size: 20px;
+    color:white;
+    font-weight: bold;
+    
+}
+
+.right-bottom p{
+    font-size: 22px;
+    
+}
+
+.right-bottom div{
+    gap:3px;
+    
+}
+
+.right-bottom a{
+   margin-top:24px;
+   font-size:20px;
+   text-decoration: none;
+   color:#596D48;
+   font-weight: bold;
+   
+
 }
 
 @font-face {
